# DAS-Embedded

./: .gitignore  README.md
src/fsae_electric_vehicle/: CMakeLists.txt  data.txt  package.xml
src/fsae_electric_vehicle/CANController/: CANController.cpp  CANController.h
src/fsae_electric_vehicle/SignalR-Client-Cpp-main/src/signalrclient/: _exports.h  signalr_default_scheduler.h
src/fsae_electric_vehicle/msg/: gps.msg
src/fsae_electric_vehicle/src/cpp/Coolant_temp/: main.cpp
src/fsae_electric_vehicle/src/cpp/SocketIOSender/: main.cpp  sioSender.h
src/fsae_electric_vehicle/src/cpp/brakes/: CANController.h  brake_pressure.cpp
src/fsae_electric_vehicle/src/cpp/dataStruct/: main.cpp
src/fsae_electric_vehicle/src/cpp/drivetrain/: drive_train.cpp
src/fsae_electric_vehicle/src/cpp/gps_lap_timer/: CANController.h  GPS.h  GPSUtilities.cpp  Lap.h  RaceTrack.h  gps_lap_timer.cpp
src/fsae_electric_vehicle/src/cpp/socketsender/: main.cpp
src/fsae_electric_vehicle/src/cpp/speedometer/: CANController.cpp  main.cpp
src/fsae_electric_vehicle/src/cpp/suspension/: main.cpp
src/fsae_electric_vehicle/src/launch/: main.launch
src/fsae_electric_vehicle/src/python/gps/: gps.py
src/fsae_electric_vehicle/src/python/reader/: reader.py
teensySketch/teensy41sensors/: teensy41sensors.ino
teensySketch/teensy41sensorsOneGPS/teensy41sensorsOneGPS/: teensy41sensorsOneGPS.ino
